# highload_web_services_course

./: .gitignore  Dockerfile  Makefile  README.md  api.md  cap.md  docker-compose.yml  hello_world.md  load_testing.md  result.md
config/fastcgi/: fastcgi.conf
config/nginx/: default.conf  nginx.conf
config/nginx/conf.d/: default.conf
load_testing/: Makefile  gen_input_for_ammo.py  load.ini  make_ammo.py  monitoring.xml  results.txt
mongo/: Dockerfile
src/: CMakeLists.txt  HelloFastCGI.cpp  Makefile  mail.cpp  mail.h  main.cpp
